# leo_sc26_ae

./: .dockerignore  .gitignore  CITATION.cff  LICENSE  README.md  ad_appendix.tex  pyproject.toml  sdc_coverage_reference.txt  sdc_coverage_reference.txt.sha256
data/: README.md
docs/: HARDWARE_SETUP.md  TROUBLESHOOTING.md  verification_log.md
scripts/: analyze_benchmark.py  check_loads.sh  collect_sdc.py  collect_sdc.sh  combine_pipeline_figures.py  compare_leo_outputs.sh  compare_vendors.py  debug_single_kernel.py  detect_chain_merges.py  download_data.sh  dump_paper.py  explore_intel_tools.sh  explore_nvidia_tools.sh  extract_validation_data.py  find_best_chain.py  generate_pipeline_grid.sh  latency_ablation.py  latency_sensitivity.py  package_data.sh  pdf_to_pptx.py  pipeline_analysis.py  plot_chain_overview.py  plot_cross_vendor_chains.py  plot_sdc.py  plot_sdc_paper.py  plot_validation_paper.py  preflight.sh  profile_benchmark.sh  run_ablation.sh  run_plot_cross_vendor.sh  run_pruning_stats.sh  run_sensitivity.sh  run_temporal_analysis.sh  run_tests_docker.sh  runme.sh  statistical_significance.py  temporal_cube_builder.cpp  temporal_visualize.py  time_analysis.py  time_analysis.sh  (+2 more)
tests/: test_analysis.py  test_arch.py  test_binary.py  test_db_reader.py  test_disasm.py  test_dwarf_line.py  test_execution_pruning.py  test_integration.py  test_intel.py  test_location_utils.py  test_metrics.py  test_parser.py  test_perturbed_arch.py  test_pipeline.py  test_program_analysis.py  test_speedup.py  test_swsb.py  test_table_formatter.py  test_topdown.py
(+353 files in other folders)
